syntax = "proto3";

package com.diegoalvis.example.grpc;

service TravelService {
  rpc GetDestinations (GetDestinationsRequest) returns (GetDestinationsResponse);
}

message GetDestinationsRequest {}

message GetDestinationsResponse {
  repeated Destination destinations = 1;
}

message Destination {
  string id = 1;
  string title = 2;
  string description = 3;
  string image_url = 4;
  string country = 5;
  string region = 6;
  repeated ThingToDo things_to_do = 7;
  repeated FoodAndDrink food_and_drinks = 8;
}

message ThingToDo {
  string id = 1;
  string title = 2;
  string description = 3;
  string image_url = 4;
  int32 reviews_count = 5;
  float score = 6;
}

message FoodAndDrink {
  string id = 1;
  string name = 2;
  string image_url = 3;
}


// Used to mock data base info from a local file in disk.
message TravelDatabase {
  repeated Destination destination = 1;
}